[project]
name = "HubBasePE-py2"
version = "0.0.1rc2"
authors = [
  { name="Voice659", email="E.R.Fahretdinov@yandex.ru" },
]
description = "HubBasePE – 3 new programs + all the original!!"
readme = "README.md"
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 2",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/HubBase-Authority/HubBasePE"
Issues = "https://github.com/HubBase-Authority/HubBasePE/issues"
Documentation = "https://github.com/HubBase-Authority/HubBasePE/wiki/Releases"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"