[project]
name = "HubBasePE"
version = "0.0.1b2"
authors = [
  { name="Voice659", email="E.R.Fahretdinov@yandex.ru" },
]
description = "HubBasePE – 2 new programs + all the original!!"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Voice659/HubBasePE"
Issues = "https://github.com/Voice659/HubBasePE/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"