[project]
name = "HubBasePE"
version = "0.0.1.0.10"
authors = [
  { name="Voice659", email="E.R.Fahretdinov@yandex.ru" },
]
description = "HubBasePE – 4 new programs + all the original!!"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/HubBase-Authority/HubBasePE"
Issues = "https://github.com/HubBase-Authority/HubBasePE/issues"
Documentation = "https://github.com/HubBase-Authority/HubBasePE/wiki/Releases"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"